--- a/weather_project/meteo_app/templates/meteo_app/main.html
+++ b/weather_project/meteo_app/templates/meteo_app/main.html
@@ -1,15 +1,31 @@
 {% extends "meteo_app/base.html" %}
 
 {% block content %}
-    <div class="container">
+    <div class="position-relative overflow-hidden p-3 p-md-3 m-md-3">
+    <div class="col-md-5 p-lg-3 mx-auto my-5">
+      <h1 class="display-4 fw-normal header-text text-dan-title text-center">Информация о погоде</h1>
+        <!--p><h5 class="text-center text-dan">Вы можете посмотреть архивные данные. Без авторизации не доступны: скачивание, фильтрация данных или построение графиков </h5></p-->
+      <br>
+                <p><a class="btn btn-outline-primary btn-out" href="meteo-data" role="button">Данные с метеостанции</a></p>
+                <p><a class="btn btn-outline-primary btn-out" href="wind-data" role="button">Данные с ветряного модуля</a></p>
+                <p><a class="btn btn-outline-primary btn-out" href="invertor-data" role="button">Данные с инвертора</a></p>
+                <div id="authInfo1" class="pb-5 pt-3 form-text title-h1">Вы можете посмотреть архивные данные. Без авторизации не доступны: скачивание, фильтрация данных или построение графиков </div>
+    </div>
+    <div class="product-device shadow-sm d-none d-md-block"> </div>
+    <div class="product-device product-device-2 shadow-sm d-none d-md-block"> </div>
+        <div class="product-device product-device-3 shadow-sm d-none d-md-block"> </div>
+  </div>
+
+    <!--div class="container">
         <div class="row">
-            <div class="col-6">
-                <h1 class="display-6">Информация о погоде</h1>
+            <div class="col-6 mt-5">
+                <h1 class="title-h1">Информация о погоде</h1>
                 <br>
                 <p><a class="btn btn-outline-primary" href="meteo-data" role="button">Данные с метеостанции</a></p>
                 <p><a class="btn btn-outline-primary" href="wind-data" role="button">Данные с ветряного модуля</a></p>
                 <p><a class="btn btn-outline-primary" href="invertor-data" role="button">Данные с инвертора</a></p>
+                <div id="authInfo" class="pb-5 pt-3 form-text">Без авторизации не доступны скачивание, фильтрация данных или построение графиков</div>
             </div>
         </div>
-    </div>
+    </div-->
 {% endblock %}
