--- a/weather_project/meteo_app/templates/meteo_app/meteo_graph.html
+++ b/weather_project/meteo_app/templates/meteo_app/meteo_graph.html
@@ -1,58 +1,63 @@
 {% extends "meteo_app/base.html" %}
 
 
-
 {% block content %}
-<div class="container">
+
+<div class="container mt-5 mb-2">
     <div class="col-12">
-        <form class="row g-3" action="{% url 'meteo-data-graph' %}" method="get">
-            <br>
-            <div id="dateInlineHelp" class="form-text">Введите дату в формате "ГГГГ-ММ-ДД". Для поиска по времени введите дату и время в формате "ГГГГ-ММ-ДД ЧЧ:ММ"</div>
-            <div id="paramInlineHelp" class="form-text">Введите параметр из таблицы</div>
-            <div class="col-auto">
-              <input type="text" class="form-control" placeholder="Дата с:"name="date_from">
+        <h1 class="display-5 fw-normal header-text text-dan-title text-center my-5">График метеорологических параметров</h1>
+        <main role="main" class="container">
+          <div class="jumbotron">
+            <div id="meteoInlineHelp" class="form-text col-auto">
+                <div class="fw-bold header-text-secondary">Вы можете построить графики по следующим параметрам:</div>
+                <div class="header-text-secondary">TA - среднее значение температуры за 1 минуту  (°C)</div>
+                <div class="header-text-secondary">DP - точка росы  (°C)</div>
+                <div class="header-text-secondary">WC - охлаждение ветром (°C)</div>
+                <div class="header-text-secondary">RH - относительная влажность (%)</div>
+                <div class="header-text-secondary">PA - атмосферное давление (mm Hg)</div>
+                <div class="header-text-secondary">PR - Количество жидких осадков мгновенное значение (мм)</div>
+                <div class="header-text-secondary">PR1H - Количество жидких осадков сумма за 1 час (мм)</div>
+                <div class="header-text-secondary">PR24h - Количество жидких осадков сумма за сутки (мм)</div>
+                <div class="header-text-secondary">SR_1M - Данные от CMP6 установленного параллельно относительно поверхности земли (Вт/м²) среднее значение за 1 минуту</div>
+                <div class="header-text-secondary">SR_1D - Данные от CMP6 установленного параллельно относительно поверхности земли (Вт/м²) среднее значение за 24 часа</div>
+                <div class="header-text-secondary">SR_45_1M - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) среднее значение за 1 минуту</div>
+                <div class="header-text-secondary">SR_45_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) среднее значение за 24 часа</div>
+                <div class="header-text-secondary">SD_1H - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 1 час</div>
+                <div class="header-text-secondary">SD_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 24 часа</div>
+                <div class="header-text-secondary">SD_45_1H - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 1 час</div>
+                <div class="header-text-secondary">SD_45_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 24 часа</div>
             </div>
-            <div class="col-auto">
-              <input type="text" class="form-control" placeholder="Дата по:" name="date_to" aria-describedby="dateInlineHelp">
-            </div>
-            <div class="col-auto">
-                <input type="text" class="form-control" placeholder="Параметр" name="param" aria-describedby="paramInlineHelp"><br>
-              </div>
-            <div class="col-auto">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="1" name="seconds" id="flexCheckChecked" unchecked>
-                <label class="form-check-label" for="flexCheckChecked">
-                  Отобразить посекундно
-                </label>
-              </div>
-            </div>
-            <div class="col-auto">
-              <button type="submit" class="btn btn-outline-secondary mb-3">Построить график</button>
-            </div>
-            <div id="meteoInlineHelp" class="form-text col-auto text-nowrap bg-light border" style="width: 55rem;">
-                <div>Вы можете построить графики по следующим параметрам:</div>
-                <div>TA - среднее значение температуры за 1 минуту  (°C)</div>
-                <div>DP - точка росы  (°C)</div>
-                <div>WC - охлаждение ветром (°C)</div>
-                <div>RH - относительная влажность (%)</div>
-                <div>PA - атмосферное давление (mm Hg)</div>
-                <div>PR - Количество жидких осадков мгновенное значение (мм)</div>
-                <div>PR1H - Количество жидких осадков сумма за 1 час (мм)</div>
-                <div>PR24h - Количество жидких осадков сумма за сутки (мм)</div>
-                <div>SR_1M - Данные от CMP6 установленного параллельно относительно поверхности земли (Вт/м²) среднее значение за 1 минуту</div>
-                <div>SR_1D - Данные от CMP6 установленного параллельно относительно поверхности земли (Вт/м²) среднее значение за 24 часа</div>
-                <div>SR_45_1M - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) среднее значение за 1 минуту</div>
-                <div>SR_45_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) среднее значение за 24 часа</div>
-                <div>SD_1H - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 1 час</div>
-                <div>SD_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 24 часа</div>
-                <div>SD_45_1H - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 1 час</div>
-                <div>SD_45_1D - Данные от CMP6 установленного 45 градусов относительно поверхности земли (Вт/м²) суммарное значение за 24 часа</div>
-            </div>
-        </form>
-        <br>
-        <p>
-            <a class="btn btn-outline-secondary" href="{% url 'meteo-data' %}"role="button">Вернуться </a>
-        </p>
+          </div>
+        </main>
+        <div id="dateInlineHelp" class="form-text header-text">Введите дату в формате "ГГГГ-ММ-ДД". Для поиска по времени введите дату и время в формате "ГГГГ-ММ-ДД ЧЧ:ММ"</div>
+
+        <div class="col-6 mt-3">
+            <form class="row g-3" action="{% url 'meteo-data-graph' %}" method="get">
+                <div class="col-auto">
+                  <input type="text" class="form-control" placeholder="Дата с:"name="date_from">
+                </div>
+                <div class="col-auto">
+                  <input type="text" class="form-control" placeholder="Дата по:" name="date_to" aria-describedby="dateInlineHelp">
+                </div>
+                    <div id="paramInlineHelp" class="mt-3 form-text header-text">Введите параметр из таблицы:</div>
+                <div class="col-auto">
+                    <input type="text" class="form-control" placeholder="Параметр" name="param" aria-describedby="paramInlineHelp"><br>
+                  </div>
+                <div class="col-auto">
+                  <div class="form-check mt-2">
+                    <input class="form-check-input" type="checkbox" value="1" name="seconds" id="flexCheckChecked" unchecked>
+                    <p><label class="form-check-label header-text" for="flexCheckChecked">
+                      Отобразить график посекундно
+                    </label></p>
+                  </div>
+                </div>
+
+                <div class="col-auto">
+                  <button type="submit" class="btn btn-outline-secondary btn-in mb-3">Построить график</button>
+                </div>
+            </form>
+        </div>
+        <!--canvas id="myChart"></canvas-->
         {% if graph %}
           {% load static %}
           <img src="{% static 'meteo_app/graph.png' %}" alt="my_image" />
