--- a/weather_project/meteo_app/templates/meteo_app/wind_graph.html
+++ b/weather_project/meteo_app/templates/meteo_app/wind_graph.html
@@ -3,54 +3,59 @@
 
 
 {% block content %}
-<div class="container">
+<div class="container mt-5 mb-2">
     <div class=col-12">
-        <form class="row g-3" action="{% url 'wind-data-graph' %}" method="get">
-            <br>
-            <div id="dateInlineHelp" class="form-text">Введите дату в формате "ГГГГ-ММ-ДД". Для поиска по времени введите дату и время в формате "ГГГГ-ММ-ДД ЧЧ:ММ"</div>
-            <div id="paramInlineHelp" class="form-text">Введите параметр из таблицы</div>
+        <h1 class="display-5 fw-normal header-text text-dan-title text-center my-5">График параметров с ветряного модуля</h1>
+        <main role="main" class="container">
+          <div class="jumbotron">
+            <div id="meteoInlineHelp" class="form-text col-auto">
+                <div class="fw-bold header-text-secondary">Вы можете построить графики по следующим параметрам:</div>
+                <div class="header-text-secondary">WS1AVG - скорость ветра (м/с)  за 3 сек</div>
+                <div class="header-text-secondary">WD1AVG - направление ветра (град) за 3 сек</div>
+                <div class="header-text-secondary">WS1MIN2 - скорость ветра (м/с) минимальное значение за 2 минуты</div>
+                <div class="header-text-secondary">WS1AVG2 - скорость ветра (м/с) среднее значение за 2 минуты</div>
+                <div class="header-text-secondary">WS1MAX2 - скорость ветра (м/с) максимальное значение за 2 минуты</div>
+                <div class="header-text-secondary">WD1MIN2 - направление ветра (град) минимальное значение за 2 минуты</div>
+                <div class="header-text-secondary">WD1AVG2 - направление ветра (град) среднее значение за 2 минуты</div>
+                <div class="header-text-secondary">WD1MAX2 - направление ветра (град) максимальное значение за 2 минуты</div>
+                <div class="header-text-secondary">WS1MIN10 - скорость ветра (м/с) минимальное значение за 10 минут</div>
+                <div class="header-text-secondary">WS1AVG10 - скорость ветра (м/с) среднее значение за 10 минут</div>
+                <div class="header-text-secondary">WS1MAX10 - скорость ветра (м/с) максимальное значение за 2 минуты</div>
+                <div class="header-text-secondary">WD1MIN10 - направление ветра (град) минимальное значение за 10 минут</div>
+                <div class="header-text-secondary">WD1AVG10 - направление ветра (град) среднее значение за 10 минут</div>
+                <div class="header-text-secondary">WD1MAX10 - направление ветра (град) максимальное значение за 10 минут</div>
+            </div>
+          </div>
+        </main>
+        <div id="dateInlineHelp" class="form-text header-text">Введите дату в формате "ГГГГ-ММ-ДД". Для поиска по времени введите дату и время в формате "ГГГГ-ММ-ДД ЧЧ:ММ"</div>
+
+        <div class="col-6 mt-3">
+            <form class="row g-3" action="{% url 'wind-data-graph' %}" method="get">
+
             <div class="col-auto">
               <input type="text" class="form-control" placeholder="Дата с:"name="date_from">
             </div>
             <div class="col-auto">
               <input type="text" class="form-control" placeholder="Дата по:" name="date_to" aria-describedby="dateInlineHelp">
             </div>
+            <div id="paramInlineHelp" class="mt-3 form-text header-text">Введите параметр из таблицы</div>
             <div class="col-auto">
                 <input type="text" class="form-control" placeholder="Параметр" name="param" aria-describedby="paramInlineHelp">
             </div>
             <div class="col-auto">
-              <div class="form-check">
+              <div class="form-check mt-2">
                 <input class="form-check-input" type="checkbox" value="1" name="seconds" id="flexCheckChecked" unchecked>
-                <label class="form-check-label" for="flexCheckChecked">
-                  Отобразить посекундно
-                </label>
+                <p><label class="form-check-label header-text" for="flexCheckChecked">
+                      Отобразить график посекундно
+                    </label></p>
               </div>
             </div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-outline-secondary mb-3">Построить график</button>
-            </div>
-            <div id="windInlineHelp" class="form-text col-auto text-nowrap bg-light border" style="width: 33rem;">
-                <div>Вы можете построить графики по следующим параметрам:</div>
-                <div>WS1AVG - скорость ветра (м/с)  за 3 сек</div>
-                <div>WD1AVG - направление ветра (град) за 3 сек</div>
-                <div>WS1MIN2 - скорость ветра (м/с) минимальное значение за 2 минуты</div>
-                <div>WS1AVG2 - скорость ветра (м/с) среднее значение за 2 минуты</div>
-                <div>WS1MAX2 - скорость ветра (м/с) максимальное значение за 2 минуты</div>
-                <div>WD1MIN2 - направление ветра (град) минимальное значение за 2 минуты</div>
-                <div>WD1AVG2 - направление ветра (град) среднее значение за 2 минуты</div>
-                <div>WD1MAX2 - направление ветра (град) максимальное значение за 2 минуты</div>
-                <div>WS1MIN10 - скорость ветра (м/с) минимальное значение за 10 минут</div>
-                <div>WS1AVG10 - скорость ветра (м/с) среднее значение за 10 минут</div>
-                <div>WS1MAX10 - скорость ветра (м/с) максимальное значение за 2 минуты</div>
-                <div>WD1MIN10 - направление ветра (град) минимальное значение за 10 минут</div>
-                <div>WD1AVG10 - направление ветра (град) среднее значение за 10 минут</div>
-                <div>WD1MAX10 - направление ветра (град) максимальное значение за 10 минут</div>
+              <button type="submit" class="btn btn-outline-secondary btn-in mb-3">Построить график</button>
             </div>
         </form>
-        <br>
-        <p>
-            <a class="btn btn-outline-secondary" href="{% url 'wind-data' %}"role="button">Вернуться </a>
-        </p>
+        </div>
+
         {% if graph %}
           {% load static %}
           <img src="{% static 'meteo_app/graph.png' %}" alt="my_image" />
